Fixed more stying issues, looks much better on mobile

--- a/styles/Experience.module.css
+++ b/styles/Experience.module.css
@@ -70,6 +70,7 @@
 
 .experience_list_element {
   margin-top: 5px;
+  margin-bottom: 10px;
   line-height: 1.3;
 }
 
