--- a/styles/Music.module.css
+++ b/styles/Music.module.css
@@ -51,3 +51,13 @@
   font-size: 1.3rem;
   margin-bottom: 25px;
 }
+
+@media screen and (max-width: 500px) {
+  .music_outer {
+    padding-left: 0;
+  }
+
+  .music_inner {
+    padding-left: 0;
+  }
+}
