--- a/styles/MusicCard.module.css
+++ b/styles/MusicCard.module.css
@@ -6,6 +6,7 @@
   height: 8rem;
   gap: 15px;
   padding-left: 20px;
+  padding-right: 10px;
   border: 1px solid gray;
 }
 
@@ -17,11 +18,6 @@
   text-align: center;
 }
 
-.music_subheader {
-  font-size: 1.3rem;
-  margin-bottom: 25px;
-}
-
 .music_image {
   height: 5rem;
   width: 5rem;
@@ -29,8 +25,27 @@
   overflow: hidden;
 }
 
+.main_label {
+  font-size: 1.2rem;
+  margin-bottom: 7px;
+}
+
+.sub_label {
+  font-size: 1rem;
+  color: rgb(181, 181, 181);
+}
+
 @media screen and (max-width: 1100px) {
   .card_outer {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .main_label {
+    font-size: 1rem;
+  }
+  .sub_label {
+    font-size: 0.9rem;
   }
 }
