--- a/styles/ProjectCard.module.css
+++ b/styles/ProjectCard.module.css
@@ -9,11 +9,11 @@
 }
 
 .project_title {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 
 .project_techstack {
-  font-size: 14px;
+  font-size: 1.2rem;
   color: rgb(181, 181, 181);
   margin-bottom: 10px;
   margin-top: 5px;
@@ -21,9 +21,10 @@
 
 .project_list {
   list-style-type: circle;
+  padding-left: 1rem;
 }
 
 .project_bullet {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   font-size: 1.1rem;
 }
